Fixes and additions (add rotating images in hooray, reorder gender gap list by estimating off my secret spreadsheet, add more ubyssey articles to the lists, remove strictmode)

--- a/src/App.css
+++ b/src/App.css
@@ -1620,6 +1620,11 @@ span.pointer {
   bottom: 0;
 }
 
+.surrounding {
+  min-width: 1000px;
+  height: auto;
+}
+
 .confetti {
   width: 50px;
   height: 10px;
